--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -11,3 +11,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.fileinput {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.fileinput + label {
+  font-size: 0.8em;
+  font-weight: 500;
+  color: white;
+  background-color:rgb(120, 120, 120);
+  display: inline-block;
+  padding: 0.4em 2em 0.4em;
+  border-radius: 5%;
+}
+
+.fileinput:focus + label,
+.fileinput + label:hover {
+  background-color: rgb(90, 90, 90);
+}
