--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -35,3 +35,22 @@ code {
 .fileinput + label:hover {
   background-color: rgb(90, 90, 90);
 }
+
+.codeMirror
+{
+  text-align: left!important;
+  font-size: 0.75em;
+  height: 100%;
+  width: 100%;
+}
+
+.CodeMirror
+{
+  width: 100%;
+  height: 100%;
+}
+
+.container-fluid
+{
+  height: 18em!important;
+}
